style.css
/* stylesheet */
@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');


:root{
    --primary-color:rgb(230, 184, 100);
}

body{
    background-image:url('assets/sithback.jpg');
    font-family: 'Do Hyeon','Arial';
    letter-spacing: 2px;
}

/* header */
div h1{
    color:white;
    display:block;
    margin:auto;
    text-align:center;
    padding-top: 2rem;
    padding-bottom: 1rem;
    /* border: 2px solid; */
}

.text{
    height: 100px;
    width:400px;
    display:block;
    margin:auto;
    resize:none;
    border-radius: 1rem;
    text-align: center;
    background:transparent;
    color:white;
    border:2px solid ;
    border-color: var(--primary-color);
    font-size: 18px;
    font-family: 'Do Hyeon';
    
}
.textarea{
    margin: 2rem;
}

div .in-button{
    display:block;
    /* for aligning to center */
    margin:auto;
    padding: 1rem 2rem;
    border-radius: 0.5rem;
    border: 2px solid var(--primary-color);
    color:white;
    background-color:transparent;
    font-size: 18px;
    font-family: 'Do Hyeon';
    
}

div .in-button:hover{
    color:black;
    font-weight: bold;
    background-color:var(--primary-color);
}

